--- a/src/main/micro-repository/src/main/modules/hello/module.yml
+++ b/src/main/micro-repository/src/main/modules/hello/module.yml
@@ -27,6 +27,8 @@ thread-groups:
     number: 10
     log-level: DEBUG
     hosts: ${servers}
+    username: fsbsilva
+    password: password01
 
 
 # Actions
