--- a/src/main/micro-repository/src/main/modules/secret/module.yml
+++ b/src/main/micro-repository/src/main/modules/secret/module.yml
@@ -10,16 +10,15 @@
 #########################################################################
 ---
 
-hosts:
-  - name: webhost
-    source:
-
 # Actions
 micro-actions:
   - name: create
-    source: ${modules.basedir}/secret/CreateKDB.groovy
+    src: ${modules.basedir}/secret/CreateKDB.groovy
     async: false
 
+  - name: encrypt
+    src: ${modules.basedir}/secret/EncryptPassword.groovy
+    async: false
 
 ...
 
